--- a/section0.tex
+++ b/section0.tex
@@ -1,6 +1,7 @@
 %!TEX Ts-program = lualatex
 %!language = zh
 \documentclass[main]{subfiles}
+\ifSubfilesClassLoaded{\makeindex}{}
 \begin{document}
 \ifSubfilesClassLoaded{%
   \tableofcontents}{%
