--- a/section3.tex
+++ b/section3.tex
@@ -79,7 +79,7 @@
 \subsubsection{随机游动的爬升时间}
 \begin{definition}\label{def:climb_time}
   设\((\xi_n:n \geq 1)\)是独立同分布的可积随机变量序列且满足\(\mathbb{E}(\xi_1)>0\)。
-  令\((W_n:n \geq 0)\)是以\((\xi_n:n \geq 1)\)为\index{tiao fu@跳幅|see 步长列}跳幅的随机游动，其中\(W_0=0\)。
+  令\((W_n:n \geq 0)\)是以\((\xi_n:n \geq 1)\)为\index{tiao fu@跳幅|see 步长长列}跳幅的随机游动，其中\(W_0=0\)。
   易知\(W_n \to +\infty\)。令\(S_0=0\)，递归地定义停时\(S_n\)，令\(S_n=\inf \{k \geq S_{n-1}:W_k > W_{S_{n-1}}\}\)。
   称每个\(S_n\)为\((W_n)\)的\index{pa sheng shi jian@爬升时间|textbf}\textbf{爬升时间}。
 \end{definition}
