--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{subfig}
 \usepackage{graphicx}
 \usepackage{forloop}
+\usepackage{tabularray}
 \usepackage{amsmath,amssymb,amsthm,bbm,float}
 \usepackage{fontspec}
 \usepackage{tikz}
@@ -74,49 +75,49 @@
 \newcommand{\filename}{main}
 \makeatletter
 \def\sf@@sub@label#1{%
-\@bsphack
-\sf@oldlabel{#1}%
-\ifhyperrefloaded
-\begingroup
-\edef\@currentlabstr{%
-\expandafter\strip@prefix\meaning\@currentlabelname}%
-\protected@write\@auxout{}{%
-\string\newlabel{\expandafter\filename:sub@#1}{%
-{\caption@lstfmt
-{\@nameuse{p@sub\@captype}}%
-{\@nameuse{thesub\@captype}}}%
-{\caption@subreffmt
-{\@nameuse{p@sub\@captype}}%
-{\@nameuse{thesub\@captype}}%
-{\the\value{\@captype}}%
-{\the\value{sub\@captype}}}%
-{\expandafter\strip@period\@currentlabelname\relax.\relax\@@@}%
-{\@currentHref}%
-{}}}%
-\endgroup
-\else
-\protected@write\@auxout{}{%
-\string\newlabel{\expandafter\filename:sub@#1}{%
-{\caption@lstfmt
-{\@nameuse{p@sub\@captype}}%
-{\@nameuse{thesub\@captype}}}%
-{\caption@subreffmt
-{\@nameuse{p@sub\@captype}}%
-{\@nameuse{thesub\@captype}}%
-{\the\value{\@captype}}%
-{\the\value{sub\@captype}}}}}%
-\fi
-\@esphack}
+  \@bsphack
+  \sf@oldlabel{#1}%
+  \ifhyperrefloaded
+    \begingroup
+    \edef\@currentlabstr{%
+      \expandafter\strip@prefix\meaning\@currentlabelname}%
+    \protected@write\@auxout{}{%
+      \string\newlabel{\expandafter\filename:sub@#1}{%
+        {\caption@lstfmt
+            {\@nameuse{p@sub\@captype}}%
+            {\@nameuse{thesub\@captype}}}%
+          {\caption@subreffmt
+            {\@nameuse{p@sub\@captype}}%
+            {\@nameuse{thesub\@captype}}%
+            {\the\value{\@captype}}%
+            {\the\value{sub\@captype}}}%
+          {\expandafter\strip@period\@currentlabelname\relax.\relax\@@@}%
+          {\@currentHref}%
+          {}}}%
+    \endgroup
+  \else
+    \protected@write\@auxout{}{%
+      \string\newlabel{\expandafter\filename:sub@#1}{%
+        {\caption@lstfmt
+            {\@nameuse{p@sub\@captype}}%
+            {\@nameuse{thesub\@captype}}}%
+          {\caption@subreffmt
+            {\@nameuse{p@sub\@captype}}%
+            {\@nameuse{thesub\@captype}}%
+            {\the\value{\@captype}}%
+            {\the\value{sub\@captype}}}}}%
+  \fi
+  \@esphack}
 \def\sf@subref#1{\ref{\expandafter\filename:sub@#1}}
 \def\sf@@subref#1{\pageref{\expandafter\filename:sub@#1}}
 \makeatother
 \AtBeginDocument{%
-\let\abslabel\label
-\let\absref\ref
-\let\abseqref\eqref
-\renewcommand{\ref}[1]{\absref{\expandafter\filename:#1}}
-\renewcommand{\eqref}[1]{\abseqref{\expandafter\filename:#1}}
-\renewcommand{\label}[1]{\abslabel{\expandafter\filename:#1}}
+  \let\abslabel\label
+  \let\absref\ref
+  \let\abseqref\eqref
+  \renewcommand{\ref}[1]{\absref{\expandafter\filename:#1}}
+  \renewcommand{\eqref}[1]{\abseqref{\expandafter\filename:#1}}
+  \renewcommand{\label}[1]{\abslabel{\expandafter\filename:#1}}
 }
 
 \title{Markov过程复习资料}
