--- a/section1.tex
+++ b/section1.tex
@@ -1,12 +1,13 @@
 %!TEX Ts-program = lualatex
 %!language = zh
 \documentclass[main]{subfiles}
+\ifSubfilesClassLoaded{\makeindex}{}
 \begin{document}
 \ifSubfilesClassLoaded{%
   \tableofcontents}{%
-  \def\filename{section0}% TODO: Input UNIQUE filename here
+  \def\filename{section1}
 }
-\section{基本概念和例子}% TODO: Input title of this section
+\section{基本概念和例子}
 \subsection{基本概念}
 \subsubsection{随机过程的定义}
 \begin{definition}\label{def:stochestic_progress}
@@ -114,6 +115,68 @@
 \end{theorem}
 \homework{2}
 \subsection{布朗运动}
+\subsubsection{背景和定义}
+\begin{definition}\label{def:Brownian}
+  假定\(\sigma^2 >0\)，具有连续轨道的实值过程\((B_t: t \geq 0)\) 满足：
+  \begin{enumerate}
+    \item \(\forall 0 \leq s \leq t\)， \(B_t-B_s \sim N(0,\sigma^2(t-s))\)；
+    \item \(\forall 0 \leq t_0 \leq \cdots \leq t_n\)， \(B_0, B_1-B_0,\cdots,B_{t_n}-B_{t_{n-1}}\) 独立，
+  \end{enumerate}
+  称\((B_t:t \geq 0)\) 是以\(\sigma^2\)为参数的\index{bu lang yun dong@布朗运动|textbf}\textbf{布朗运动}。特别的，
+  当\(\sigma^2=1\)，\((B_t: t \geq 0)\)为\index{biao zhun bu lang yun dong@标准布朗运动|textbf}\textbf{标准布朗运动}。
+\end{definition}
+\begin{definition}\label{def:正态过程}
+  有限维分布为正态分布的随机过程称为\index{zheng tai guo cheng@正态过程|textbf}\textbf{正态过程}。
+\end{definition}
+\subsubsection{布朗运动的构造}
+\begin{theorem}\label{the:布朗运动存在}
+  布朗运动是有连续实现的。
+  证明见教材p13.
+\end{theorem}
+\subsubsection{布朗运动的性质}
+\begin{theorem}\label{the:1.3.6}
+  从原点出发的零均值高斯过程\((B_t: t \geq 0)\) 是标准布朗运动 \(\iff\) \(\forall s, t \geq 0\)，
+  \(\mathbb{E}(B_tB_s)=t \AND s\)。
+  证明p17.
+\end{theorem}
+\begin{theorem}\label{the:1.3.7}
+  布朗运动轨道几乎处处不可导。
+  证明p17-18.
+\end{theorem}
+\homework{3}
+\subsection{普瓦松过程}
+\begin{definition}\label{def:Poisson Process}
+  \((N_t: t \geq 0)\) 是非负整数不降随机过程，\(\alpha \geq 0\)满足： 
+  \begin{enumerate}
+    \item \(\forall s,t \geq 0\)， \(N_{s + t}-N_s \sim P(\alpha t)\)，即：
+      \(\mathbb{P}(N_{s + t}-N_s=k)=\frac{\alpha^kt^k}{k !}\mathrm{e}^{-\alpha t}\)； 
+    \item \(\forall 0 \leq t_0 < \cdots< t_n\)， \(N_0,N_{t_{1}}-N_{t_0},\cdots,N_{t_n}-N_{t_{n-1}}\)相互独立。
+  \end{enumerate}
+  称\((N_t:t \geq 0)\) 是\index{pu wa song guo cheng@普瓦松过程|textbf}\textbf{普瓦松过程}，参数为\(\alpha\)。
+\end{definition}
+\subsection{跳跃间隔时间}
+\((N_t: t \geq 0)\)，\(S_0=0,n \geq 1\)， \(S_n=\inf \{t \geq 0: N_t-N_0 \geq 0\}\)，\(\eta_n=S_n-S_{n-1}\)。
+\(S_n\) 是\((N_t : t \geq 0)\)第\(n\)次跳跃等待时间，\(\eta_n\)第\(n-1\)次跳跃到第\(n\)次跳跃的间隔时间。
+\begin{theorem}\label{the:1.4.1}
+  \(\{\eta_n:n \geq 1\}\) 独立同分布，服从\(Exp(\alpha)\)。
+  \(S_n, n \geq 1\)，服从\(\Gamma(1,\alpha)\)。
+  证明见P19.
+\end{theorem}
+\subsection{轨道重构}
+\begin{theorem}\label{the:1.4.3}
+  \(\{\eta_n:n \geq 1\}\) 独立同分布，服从\(Exp(\alpha),\gamma >0\)。
+  \(S_0=0,S_n=\sum_{k=1}^{n} \eta_k\)，则：
+  \[
+    N_t=\sum_{n=1}^{\infty} \mathbbm{1}_{S_n \leq t}=\sup\{n \geq 0: S_n \leq t\}.
+  \]
+  则随机过程\((N_t:t \geq 0)\)是以参数为\(\alpha\)的普瓦松过程。
+\end{theorem}
+\subsection{长时间极限行为}
+
+
+
+
+
 
 \ifSubfilesClassLoaded{%
   \printindex }{%
