--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,7 @@
 \newenvironment{solution}{\begin{proof}[\Solution]}{\end{proof}}
 \newtheorem{definition}{Definition}
 \newtheorem{theorem}{Theorem}
+\newtheorem{corollary}{Corollary}
 \def\homework#1{}
 \def\to{\rightarrow}
 \newcommand{\xor}{\vee}
@@ -71,7 +72,7 @@
 \DeclareMathOperator{\ot}{ordertype}
 \DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\ran}{ran}
-
+\newcommand{\res}[2]{#1|_{#2}}
 \newcommand{\filename}{main}
 \makeatletter
 \def\sf@@sub@label#1{%
