--- a/section4.tex
+++ b/section4.tex
@@ -87,6 +87,9 @@
   记全体满足\(\forall n,A \cap \{\tau \leq n\} \in \mathcal{G}_n\)的\(A\)组成的\(\sigma\)-代数为\(\mathcal{G}_\tau\)。
   \index{g tau@\(\mathcal{G}_\tau\)|textbf}
 \end{definition}
+\begin{theorem}
+
+\end{theorem}
 
 \ifSubfilesClassLoaded{%
   \printindex}{%
