--- a/section1.tex
+++ b/section1.tex
@@ -207,6 +207,7 @@
     \item \(\forall 0 \leq t_0 <\cdots<t_n, X_{t_0},X_{t_1}-X_{t_0},\cdots,X_{t_n}-X_{t_{n-1}} \) 相互独立。
   \end{enumerate}
 \end{theorem}
+\homework[4]
 \subsection{普瓦松随机测度}
 \subsubsection{定义和存在性}
 \((E,\mathcal{E})\)为可测空间，\(\mu\)为\((E,\mathcal{E})\)上的\(\sigma\)有限测度。
@@ -256,6 +257,24 @@
   \]
   见p28.
 \end{theorem}
+%%TODO:补偿测度？？？
+\subsubsection{应用}
+\begin{theorem}[\index{fu ge pu wa song guo cheng gou zao@复合普瓦松过程构造}复合普瓦松过程构造]\label{the:复合普瓦松过程构造}
+  \(\nu\)为\(\mathbb{R}\)上非零有限测度。\(N(ds,dz)\)为\((0,\infty)\times \mathbb{R}\)上以\(ds \nu(dz)\)为强度的普瓦松随机测度，
+  \(ds\)为勒贝格测度，\(X_0\)与\(N(ds,dz)\)独立，\[
+    X_t=X_0 + \iint_{(0,t]\times \mathbb{R}}z N(ds,dz),t \geq 0
+  \]
+  则\((X_t:t \geq 0)\)具有跳跃速率\(\alpha\)和跳跃分布\(\mu:=\nu(\mathbb{R})^{-1}\nu\)的复合普瓦松过程。
+\end{theorem}
+\begin{theorem}[\index{fu ge pu wa song guo cheng gou zao@复合普瓦松过程构造2}复合普瓦松过程构造2]\label{the:复合普瓦松过程构造2}
+  \(\mu\)为\(\mathbb{R}\)上非零\(\sigma\)有限测度，\(\mu(\{0\})=0\)，\(q\)为\(\mathbb{R}\)上非负博雷尔可测函数，\(0 < \beta :=\mu(q)<\infty\)。
+  \(N(ds,dz,du)\)为\((0,\infty)\times \mathbb{R}\times(0,\infty)\)上以\(ds \mu(dz)du\)为强度的普瓦松随机测度，
+  \(ds\)为勒贝格测度，\(X_0\)与\(N(ds,dz)\)独立，\[
+    X_t=X_0 + \iiint_{(0,t]\times \mathbb{R}\times[0,q(z)]}z N(ds,dz,du),t \geq 0
+  \]
+  则\((X_t:t \geq 0)\)具有跳跃速率\(\beta\)和跳跃分布\(\beta^{-1}q(z)\mu(dz)\)的复合普瓦松过程。
+\end{theorem}
+\homework[5]
 
 \ifSubfilesClassLoaded{%
   \printindex }{%
