--- a/main.tex
+++ b/main.tex
@@ -123,6 +123,7 @@
 
 \title{Markov过程复习资料}
 \author{白永乐}
+\makeindex
 \begin{document}
 \maketitle
 \tableofcontents
@@ -132,4 +133,5 @@
     \newpage%
   }{}%
 }
+\printindex
 \end{document}
