--- a/main.tex
+++ b/main.tex
@@ -50,8 +50,10 @@
 \newtheorem{definition}{Definition}
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
-\def\homework#1{}
+\def\homework#1{\subfile{homework/MarkovProcess#1.tex}}
 \def\to{\rightarrow}
+\newcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
+\newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 \newcommand{\xor}{\vee}
 \newcommand{\AND}{\wedge}
 \newcommand{\OR}{\vee}
