--- a/section1.tex
+++ b/section1.tex
@@ -207,7 +207,7 @@
     \item \(\forall 0 \leq t_0 <\cdots<t_n, X_{t_0},X_{t_1}-X_{t_0},\cdots,X_{t_n}-X_{t_{n-1}} \) 相互独立。
   \end{enumerate}
 \end{theorem}
-\homework[4]
+\homework{4}
 \subsection{普瓦松随机测度}
 \subsubsection{定义和存在性}
 \((E,\mathcal{E})\)为可测空间，\(\mu\)为\((E,\mathcal{E})\)上的\(\sigma\)有限测度。
@@ -274,7 +274,7 @@
   \]
   则\((X_t:t \geq 0)\)具有跳跃速率\(\beta\)和跳跃分布\(\beta^{-1}q(z)\mu(dz)\)的复合普瓦松过程。
 \end{theorem}
-\homework[5]
+\homework{5}
 
 \ifSubfilesClassLoaded{%
   \printindex }{%
