--- a/section1.tex
+++ b/section1.tex
@@ -250,7 +250,7 @@
   见p29.
 \end{theorem}
 \subsubsection{积分与补偿的测度}
-\begin{theorem}[\index{pu wa song sui ji ce duo de chong yao tiao jian a@普瓦松随机测度的充要条件2}普瓦松随机测度的充要条件2]\label{the:普瓦松随机测度的充要条件2}
+\begin{theorem}[\index{pu wa song sui ji ce duo de chong yao tiao jian a@普瓦松随机测度的充要条件}普瓦松随机测度的充要条件2]\label{the:普瓦松随机测度的充要条件2}
   \(X\)为\((E,\mathcal{E})\)上以\(\mu\)为强度的整数值随机测度，则\(X\)为普瓦松随机测度的充要条件是
   \(\forall f \in \mathbb{R}^{\mathbb{R}}:\mu(f)< \infty ,\)，则\[
     \mathbb{E}\exp(\mathrm{i}X(f))=\exp(\int_{E}(\mathrm{e}^{\mathrm{i}f(x)}-1)\mu(dx))
@@ -266,7 +266,7 @@
   \]
   则\((X_t:t \geq 0)\)具有跳跃速率\(\alpha\)和跳跃分布\(\mu:=\nu(\mathbb{R})^{-1}\nu\)的复合普瓦松过程。
 \end{theorem}
-\begin{theorem}[\index{fu ge pu wa song guo cheng gou zao@复合普瓦松过程构造2}复合普瓦松过程构造2]\label{the:复合普瓦松过程构造2}
+\begin{theorem}[\index{fu ge pu wa song guo cheng gou zao@复合普瓦松过程构造}复合普瓦松过程构造2]\label{the:复合普瓦松过程构造2}
   \(\mu\)为\(\mathbb{R}\)上非零\(\sigma\)有限测度，\(\mu(\{0\})=0\)，\(q\)为\(\mathbb{R}\)上非负博雷尔可测函数，\(0 < \beta :=\mu(q)<\infty\)。
   \(N(ds,dz,du)\)为\((0,\infty)\times \mathbb{R}\times(0,\infty)\)上以\(ds \mu(dz)du\)为强度的普瓦松随机测度，
   \(ds\)为勒贝格测度，\(X_0\)与\(N(ds,dz)\)独立，\[
