--- a/section4.tex
+++ b/section4.tex
@@ -106,6 +106,7 @@
 方便起见，记\(\mathbb{P}_i=\mathbb{P}(\cdot \mid X_0=i)\)，用\(\mathbb{E}_i\)表示对应的期望。
 \index{Ei@\(\mathbb{E}_i\)|textbf}
 \homework{8}
+\homework{9}
 \ifSubfilesClassLoaded{%
   \printindex}{%
 }
